---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: ??.01.2024
  Compatibility:
    - Better compatibility with mods that add custom train stops.
  Changes:
    - Slightly change area formatting when the number is small.
    - Do not count trains on editor surfaces.
    - (Internal) Harden gathering statistics from other mods even more.
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 15.01.2024
  Compatibility:
    - Mods can now force the victory, even if it has been reached before.
    - Mods can now specify a custom victory message. This message can optionally be different for winners and losers.
    - Added soft compatibility for some specific mods. This allows you to add Better Victory Screen
      to playthroughs to track your statistics. However, until full compatibility is added by the other 
      mod the vanilla screen will still be shown. This list currently includes:
        Space Exploration, Krastorio 2, SpaceMod, Pyanodons.
  Changes:
    - More consistent and safer formatting of numbers. Now with working unit tests.
    - Safer gathering of statistics from other mods by suppressing any crashes.
    - Add some Cargo Ships statistics.
  Bugfixes:
    - Always show Victory Screen to all players (even when in f.i. Editor Extensions lab).
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 11.01.2024
  Bugfixes:
    - Fix that percentages would not have been shown correctly.
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 10.01.2024
  Features:
    - Better compatibility with mods that add compatibility after BVS is added. BVS should now detect
      this automatically.
    - Added command `/reset-victory-condition` to reset a victory logged by BVS in case something goes