@@ -29,8 +29,7 @@ distance-walked=Distance Walked
 distance-drove=Distance Driven
 handcrafting-time=Time spent handcrafting
 
-# From this point on it's only campat things
-#-------------------------------------------
+# 'bvs-stats' - Compatibility section
 # Cargo Ships
 waterways=Waterways
 
@@ -38,3 +37,9 @@ waterways=Waterways
 total-enemy-kills=Total amount of unit and spawner kills by your force.
 distance-drove=Driving in both vehicles and trains.
 peak-power=Peak power production on a single electric network.
+
+[mod-setting-name]
+bvs-enable-show-victory-screen-command=Enable [color=cyan]/show-victory-screen[/color] command
+
+[mod-setting-description]
+bvs-enable-show-victory-screen-command=Enable the command [color=cyan]/show-victory-screen[/color] that shows the victory screen as if victory has been reached, without actually triggering the victory. This is mainly for development purposes, but might be interesting for some players. This command does not have any impact on the game.
