@@ -1,0 +1,9 @@
+data:extend({
+    {
+        type = "bool-setting",
+        name = "bvs-enable-show-victory-screen-command",
+		setting_type = "startup",
+        order = "a",
+		default_value = false,
+    },
+})
